[package]
name = "l4d2-uncut-patcher"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Git
external = { git = "https://github.com/CasualX/external", rev = "f644b4c" }
# Cargo
pretty_env_logger = "0.4"
log = { version = "0.4", features = ["release_max_level_info"] }
clap = { version = "4.0", features = ["std", "derive"] }
anyhow = "1.0"
regex = "1.6"
drop_guard = "0.3.0"
